Changing image urls to fix production build
Currently the production build on the github page
is not showing the assets and images we set up
which we can see locally. So the urls got prefixed
with the base url in order to test for a fix.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -18,14 +18,14 @@ $dt-v-dark-gray-blue: hsl(233, 14%, 35%);
 $dt-v-dark-gray-blue-two: hsl(237, 14%, 26%);
 
 // Links
-$bg-desktop-dark: url("images/bg-desktop-dark.jpg");
-$bg-desktop-light: url("images/bg-desktop-light.jpg");
-$bg-mobile-dark: url("images/bg-mobile-dark.jpg");
-$bg-mobile-light: url("images/bg-mobile-light.jpg");
-$icon-check: url("images/icon-check.svg");
-$icon-cross: url("images/icon-cross.svg");
-$icon-moon: url("images/icon-moon.svg");
-$icon-sun: url("images/icon-sun.svg");
+$bg-desktop-dark: url("/frontend-mentor-todo-app/images/bg-desktop-dark.jpg");
+$bg-desktop-light: url("/frontend-mentor-todo-app/images/bg-desktop-light.jpg");
+$bg-mobile-dark: url("/frontend-mentor-todo-app/images/bg-mobile-dark.jpg");
+$bg-mobile-light: url("/frontend-mentor-todo-app/images/bg-mobile-light.jpg");
+$icon-check: url("/frontend-mentor-todo-app/images/icon-check.svg");
+$icon-cross: url("/frontend-mentor-todo-app/images/icon-cross.svg");
+$icon-moon: url("/frontend-mentor-todo-app/images/icon-moon.svg");
+$icon-sun: url("/frontend-mentor-todo-app/images/icon-sun.svg");
 
 
 // Fonts
